--- a/animtaion/src/App.css
+++ b/animtaion/src/App.css
@@ -23,6 +23,7 @@
   border-radius: 50%;
   z-index: 1000;
 }
+
 .moon:after {
   content: "";
   position: absolute;
@@ -35,13 +36,40 @@
   background-attachment: fixed;
 }
 
+@media only screen and (max-width: 600px) {
+  .moon {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    width: 50px;
+    height: 50px;
+    background: #fff;
+  }
+  .moon:after {
+    content: "";
+    position: absolute;
+    top: -10px;
+    left: 10px;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: linear-gradient(#111425, #3751e0);
+    background-attachment: fixed;
+  }
+  .forest {
+    position: absolute;
+    height: 150px;
+    z-index: 1000;
+  }
+}
+
 .forest {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   z-index: 1000;
-  transform: scale(1.2);
+  transform: scale(1.5);
 }
 
 .scene i {
